<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">
        <Button
            android:id="@+id/button_table_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_table_number"/>
        <Button
            android:id="@+id/button_submit_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_submit_order"/>
    </LinearLayout>
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">
        <Button
            android:id="@+id/button_view_orders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_view_orders"/>
    </LinearLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                                android:orientation="vertical"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                android:id="@+id/recycler_view_menu_fragment">

        </android.support.v7.widget.RecyclerView>-->

        <ListView
            android:id="@+id/list_view_dish_type_section"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">
        </ListView>

        <TextView
            android:id="@+id/text_view_menu_fragment_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/menu_fragment_text_top"/>

    </RelativeLayout>


</LinearLayout>